--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <project name="master" default="genwar" xmlns:sonar="antlib:org.sonar.ant">
 
-    <property name="war-file-name" value="RebelOutfitters"/>
+    <property name="war-file-name" value="Sample Logo"/>
    
     <target name="genwar">
         <echo>Building war: ${war-file-name}.war</echo>
